WIP: save changes before history rewrite

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,28 @@
         
   
   
+    <h2><a href="/blog/posts/hidden-markov-gold-analysis/">A Hidden Markov Model Analysis for Gold Historical Data</a></h2>
+    <style>
+img {
+  max-height: 60vh !important;
+  width: auto !important;
+  max-width: 100% !important;
+  object-fit: contain !important;
+  display: block !important;
+  margin: 0 auto !important;
+}
+figcaption {
+  text-align: center !important;
+  font-style: italic !important;
+  color: #666 !important;
+  margin: 0.5rem auto 1.5rem auto !important;
+  font-size: 0.9rem !important;
+}
+</style>
+<p>What is &ldquo;Hidden States&rdquo; concept? Why are the states &ldquo;Hidden&rdquo; and not observable? How can we foresee the states in Candlestick Chart data with the power of mathematics?</p>
+  
     <h2><a href="/blog/posts/introducing-investmuse/">How InvestMuse Transforms Investment Analysis: From Daily Hot Picks to AI-Powered Financial Insights</a></h2>
-    <h1 id="the-problem-every-investor-faces">The Problem Every Investor Faces</h1>
-<p>Sarah, a marketing manager with a growing investment portfolio, starts her day like millions of other investors worldwide. She opens her laptop, checks the market, and immediately feels overwhelmed. TradingView shows her charts, but interpreting the technical indicators requires expertise she doesn&rsquo;t have. Financial news websites flood her with conflicting opinions. Yahoo Finance displays basic numbers, but connecting the dots between a company&rsquo;s financial health and its investment potential feels like solving a puzzle with missing pieces.</p>
+    Discover how InvestMuse transforms investment analysis with AI-powered insights, daily market opportunities, and institutional-grade tools for everyday investors.
   
 
     </div>
